<resources>
    <string name="app_name">IVS</string>
    <string name="indian_vedic_school">Indian Vedic School</string>
    <string name="john_doe_gmail_com">john.doe@gmail.com</string>
    <string name="_1_234_5678_910">+1 234 5678 910</string>
    <string name="john_doe">John Doe</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account_register">Don’t have an account? Register</string>
    <string name="or_with">------ Or With ------</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="start">GET STARTED</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="back_to_school_simplicity">Back to school
        simplicity</string>
    <string name="easily_navigate">Easily navigate through courses and packages to choose your interests with a user friendly interface</string>
    <string name="s">S</string>
    <string name="get_started">Get Started</string>
    <string name="username">Manish Surapaneni</string>
    <string name="view_profile">View profile</string>
    <string name="reset_password">Reset your password</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="enter_email_password">Enter your Email ID and we will send \n you password reset link</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="reset_successful">We have successfully \n reset your password</string>
    <string name="login_now">Login Now</string>
    <string name="payment_successfull">Payment Successfull</string>
    <string name="payment_unsuccessfull">Payment Unsuccessful</string>
    <string name="txn_code_value">#123489</string>
    <string name="courses">Course: Mantras, Tantras \n and Yantras</string>
    <string name="view_course">View Course</string>
    <string name="log_out">Log Out</string>
    <string name="user_email">manish@wtastudios.com</string>
    <string name="user_password">*********</string>
    <string name="facebook_application_id">690757684412895</string>
    <string name="user_phno">+91 9652521125</string>
    <string name="terms_conditions">1. The agreement also includes a clause that reserves its right to suspend overdue accounts. \n 2. This can be incredibly important for a SaaS app so that its rights to take action against non-paying customers are maintained and reserved, as well as made known to the customers.</string>
    <string name="coursename">Mantra, Tantra \n and Yantra</string>
    <string name="about_ivs">The oldest scriptures to ever be documented, The wisdom from the Iron age of the Indian subcontinent, The Vedas laid down the foundation in the areas of study, progress and expression for countless human advancements. \n \n  With each passing generation and the increasing ignorance of the human species, this invaluable knowledge is being lost in translation as it is documented in nothing more than a paragraph in middle-school textbooks. \n \n  What we fail to understand is that by investigating the knowledge and viewpoints in the many subjects within the Vedic culture we can certainly see that the practice and utilization of this knowledge can indeed assist us equally today as it did thousands of years ago. \n \n The Indian Vedic School is the first of its kind website offering a wide range of Vedic courses and categories to study from. A platform for seekers and speakers to connect and learn the Vedic sciences and reap a conscious generation with the wisdom of our forefathers without prejudice of Caste, Creed, Nationality or Religion. \n \n For the very first time, We are offering certifiable courses in various modules from the Vedic culture in an attempt to save revive this rare and dying knowledge. The Indian Vedic School is a global platform for humanity to benefit from the Vedas through introspection, spirituality and material development as it did in the past assisting us in our attempts to reach our higher potential.\n \n  The Vedas hold a constant and higher nature of the power of Dharma that needs to be re-recognized and utilized to make this world a better place in these troubled times, Hence, The Indian Vedic School.\n \n</string>
    <string name="teacher_name">Srimathi Devi Rani</string>
    <string name="about_course"><![CDATA[Music Therapy is an evidence-based, clinical use of music interventions to accomplish individualized goals by a professional who has completed an approved music therapy program. It has been proven to induce a  therapeutic relationship between body and sound providing relief from various clinical ailments. Music is often associated to mood. Since the impact of music on a person’s mindset and well-being is unanimous, it’s no surprise that music therapy has been studied for the benefit of human beings not only soothingly, but also medically.]]></string>
    <string name="ratings_reviews"><![CDATA[Ratings & Reviews]]></string>
    <string name="review_write">Write a review</string>
    <string name="date_review">28th, August 2017</string>
    <string name="language">Language: Telugu</string>
    <string name="course_duration">3 Months</string>
    <string name="rating">3.4 Rating</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>
    <string name="action_settings">settings</string>
    <string name="reviews_count">23 reviews</string>
    <string name="course_count">4 Courses</string>
    <string name="review_value">3.8</string>
    <string name="about">About</string>
    <string name="courses_title">Courses</string>
    <string name="videos_title">Videos</string>
    <string name="videos_count">22 Videos </string>
    <string name="class1_name">Kundalani 1 The Vital \n force introduction</string>
    <string name="courseprice">Course Price</string>
    <string name="welcome_user">Welcome \n  MANISH SURAPANENI \n Start Taking Courses!</string>
    <string name="our_courses">Our Courses</string>
    <string name="course_time">3 Months</string>
    <string name="starting_from">Starting from</string>
    <string name="cost">2,000</string>
    <string name="class_duration">03:45</string>
    <string name="try_again">Try Again</string>
    <string name="total_amount_2_350">Total Amount: 2,350</string>
    <string name="rating_number">2.9</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="srimathi_devi_rani">Srimathi Devi \n  Rani</string>

</resources>
