<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo"
        android:paddingTop="@dimen/image_top_padding"
        android:paddingBottom="@dimen/image_bottom_padding"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/title"
        android:fontFamily="@font/arlrdbd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/image_bottom_padding"
        android:letterSpacing="-0.03"
        android:textColor="#000000"
        android:textSize="26.3sp"
        android:text="@string/indian_vedic_school"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="13.7sp"
        android:layout_below="@+id/title"
        android:id="@+id/reset_password"
        android:gravity="center"
        android:paddingTop="100.7dp"
        android:paddingBottom="18dp"
        android:textColor="#252525"
        android:letterSpacing="0.03"
        android:layout_centerInParent="true"
        tools:text="@string/enter_email_password" />

    <EditText
        android:layout_width="@dimen/textbox_width"
        android:layout_height="@dimen/textbox_height"
        android:paddingTop="18dp"
        android:id="@+id/email"
        android:text="@string/john_doe_gmail_com"
        android:layout_marginTop="@dimen/edit_top_padding"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/reset_password"
        android:background="@drawable/border_for_textbox" />

    <Button
        android:layout_width="@dimen/textbox_width"
        android:layout_height="@dimen/textbox_height"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:id="@+id/login"
        android:textAllCaps="false"
        android:text="@string/send_reset_link"
        android:layout_marginTop="@dimen/edit_top_padding"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_below="@+id/email"
        android:background="@drawable/custom_button_drawable" />

</RelativeLayout>