<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image_success_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txn_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64.7dp"
        android:layout_alignRight="@+id/txn_code"
        android:src="@drawable/success"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/payment_sucess"
        android:fontFamily="@font/arlrdbd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_success_payment"
        android:layout_centerHorizontal="true"
        android:paddingTop="42.7dp"
        android:letterSpacing="-0.03"
        android:textColor="#000000"
        android:textSize="26.3sp"
        android:text="@string/payment_successfull"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="9.9sp"
        android:paddingTop="7.7dp"
        android:id="@+id/txn_code_text"
        android:layout_below="@+id/payment_sucess"
        android:layout_centerHorizontal="true"
        android:textColor="#8c2b2b2b"
        android:text="Transaction Code" />

    <Button
        android:layout_width="129.3dp"
        android:layout_height="45.7dp"
        android:paddingTop="9.3dp"
        android:id="@+id/txn_code"
        android:text="@string/txn_code_value"
        android:fontFamily="@string/com_facebook_smart_login_confirmation_title"
        android:layout_below="@+id/txn_code_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18.7sp"
        android:id="@+id/amount"
        android:paddingTop="24dp"
        android:paddingBottom="13dp"
        android:textColor="#000000"
        android:layout_below="@+id/txn_code"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="Total Amount paid:    2,350" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18.7sp"
        android:textColor="#000000"
        android:paddingTop="13dp"
        android:id="@+id/courses"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/amount"
        android:gravity="center_horizontal"
        android:text="@string/courses" />

    <Button
        android:layout_width="@dimen/textbox_width"
        android:layout_height="@dimen/textbox_height"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:id="@+id/view_course"
        android:textAllCaps="false"
        android:text="@string/view_course"
        android:fontFamily="@font/helveticaneueltstd_md"
        android:layout_marginTop="37dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:layout_below="@+id/courses"
        android:background="@drawable/custom_button_drawable" />

</RelativeLayout>