<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="11.7dp"
        android:layout_height="11.7dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/onboarding_desc"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/indicator_selected" />

    <!--divider-->
    <view
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/onboarding_view"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:layout_below="@id/onboarding_frame"
        android:alpha="0.12" />

    <ImageView
        android:id="@+id/onboarding_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="fill_horizontal"
        android:background="@drawable/onboarding_s" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:shadowColor="#4c000000"
        android:shadowDx="14.744736797201853"
        android:shadowDy="10.324375854318829"
        android:shadowRadius="38"
        android:textSize="214.7sp"
        android:textColor="#ff643c"
        android:letterSpacing="-0.03"
        android:layout_marginLeft="35.7dp"
        android:gravity="center_horizontal"
        android:layout_above="@+id/onboarding_title"
        android:text="@string/s"
        tools:ignore="UnusedAttribute"
        android:layout_marginStart="35.7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:id="@+id/onboarding_title"
        android:textColor="#000000"
        android:layout_above="@+id/onboarding_desc"
        android:layout_marginBottom="12.3dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:text="@string/back_to_school_simplicity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15.3sp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="41dp"
        android:id="@+id/onboarding_desc"
        android:layout_above="@+id/onboarding_button"
        android:textColor="#958686"
        android:text="@string/easily_navigate" />

    <Button
        android:layout_width="165.3dp"
        android:layout_height="46.7dp"
        android:layout_gravity="bottom|start"
        android:text="@string/get_started"
        android:id="@+id/onboarding_button"
        android:layout_marginStart="30.3dp"
        android:layout_marginLeft="30.3dp"
        android:layout_marginBottom="29.3dp"
        android:layout_alignParentBottom="true"
        android:textSize="15.3sp"
        android:background="@drawable/custom_button_drawable"
        android:textColor="#ffffff" />

</RelativeLayout>