<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:paddingBottom="@dimen/image_bottom_padding"
            android:paddingTop="@dimen/image_top_padding"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15.7dp"
            android:fontFamily="@font/arlrdbd"
            android:letterSpacing="-0.03"
            android:paddingBottom="39dp"
            android:text="@string/indian_vedic_school"
            android:textColor="#000000"
            android:textSize="26.3sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="@dimen/textbox_width"
            android:layout_height="@dimen/textbox_height"
            android:layout_alignLeft="@+id/loginpassword"
            android:layout_alignStart="@+id/loginpassword"
            android:layout_below="@+id/title"
            android:layout_marginTop="16dp"
            android:background="@drawable/border_for_textbox"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="Enter E-Mail ID"
            android:text="nagaram.venkat@gmail.com"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="@dimen/textbox_width"
            android:layout_height="@dimen/textbox_height"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16.3dp"
            android:background="@drawable/border_for_textbox"
            android:inputType="textPassword"
            android:maxLines="1"
            android:text="venkat123"
            android:hint="Enter Password"
            android:textAlignment="center" />


        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/textbox_width"
            android:layout_height="@dimen/textbox_height"
            android:layout_below="@+id/loginpassword"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="15.3dp"
            android:background="@drawable/custom_button_drawable"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="28.3dp"
            android:text="@string/forgot_password"
            android:textColor="#9b9b9b"
            android:textSize="15.8sp" />

        <TextView
            android:id="@+id/optional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgetpassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32.7dp"
            android:letterSpacing="0.03"
            android:paddingBottom="21.7dp"
            android:text="@string/or_with"
            android:textColor="#80000000"
            android:textSize="12sp"
            tools:ignore="UnusedAttribute" />

        <Button
            android:id="@+id/facebooklogin"
            android:layout_width="145dp"
            android:layout_height="47dp"
            android:layout_alignLeft="@+id/login"
            android:layout_alignStart="@+id/login"
            android:layout_below="@id/optional"
            android:layout_marginTop="21.7dp"
            android:background="#3b5998"
            android:letterSpacing="0.03"
            android:text="Facebook"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="15.8sp" />

        <Button
            android:id="@+id/googleplus"
            android:layout_width="145dp"
            android:layout_height="47dp"
            android:layout_alignEnd="@+id/login"
            android:layout_alignRight="@+id/login"
            android:layout_below="@+id/optional"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="21.7dp"
            android:background="#ff3e3e"
            android:letterSpacing="0.01"
            android:text="Google"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="15.8sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/facebooklogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25.3dp"
            android:paddingBottom="29dp"
            android:text="@string/don_t_have_an_account_register"
            android:textColor="#252525"
            android:textSize="15.8sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>